[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Elbert Castaneda <elbert.castaneda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
rust-embed = "5.6.0"
rust-embed-rocket = {git = "https://github.com/peacememories/rust-embed-rocket"}
