[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Elbert Castaneda <elbert.castaneda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
diesel = { version = "2.0.1", features = ["postgres"] }
dotenv = "0.15.0"
rust-embed = "6.4.1"
